--- a/_data/cursada_actual/13.yml
+++ b/_data/cursada_actual/13.yml
@@ -13,6 +13,9 @@ ejercicios:
   - name: Semillas al viento
     repo: obj1-unahur/semillas-2019s2
     classroom: https://classroom.github.com/a/1fVO5thJ
+    apuntes:
+      - name: Avances clase de la tarde
+        repo: obj1-unahur-2019s2/semillas-clombardi
   - name: Pajarracos
     repo: obj1-unahur/pajarracos-2019s2
     classroom: https://classroom.github.com/a/24QCCxQf
