--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -6,12 +6,6 @@ descripcion: |
 
 
 ejercicios:
-  - name: Viajes en auto (diagnóstico)
-    repo: obj1-unahur/viajesEnAuto-diagnostico
-    classroom: https://classroom.github.com/a/_Dhc3SuS
-  - name: Multipepita
+  - name: Multipepita - Etapa 1
     repo: obj1-unahur/multipepita
-    classroom: https://classroom.github.com/a/0U__FvwF
-    apuntes:
-      - name: clase de la tarde
-        repo: obj1-unahur-2019s2/multipepita-clombardi
+    classroom: https://classroom.github.com/a/k-Yxfxi3
