cambio de nombre a pepita la golondrina

--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -9,7 +9,7 @@ descripcion: |
 entrega:
   fecha: 2020-04-14T14:00
   mumuki:
-    - nombre: Multipepita etapa 1
+    - nombre: Multipepita la golondrina
       url: https://mumuki.io/wollok-obj1/lessons/731-objetos-y-mensajes-acompanamiento-multipepita-etapa-1
       ejercicios: Obligatorios 1 y 2. Opcionales 3 y 4
   ejercicios:
