agrego video ejercicio gustos

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -13,6 +13,8 @@ videos:
     url: https://youtu.be/SqzokSK7ckk
   - nombre: Variantes para definir la memoria de un objeto
     url: https://youtu.be/_JSncjztLAY
+  - nombre: Ejercicio "Gustos" - comentarios para encararlo
+    url: https://youtu.be/dRy92EB4ppM
 
 conferencia:
   url: https://meet.jit.si/obj1#config.startWithVideoMuted=true
