correct bad link

--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -6,7 +6,7 @@ descripcion: |
 
 videos:
   - nombre: Agregándole métodos a Pepita
-    url: https://youtu.be/o8a-ngbRnxc
+    url: https://youtu.be/TQba-e_m5Lc
   - nombre: Manejo correcto de valores booleanos - "miedo al booleano"
     url: https://youtu.be/o8a-ngbRnxc
   - nombre: Varios objetos interactuando, polimorfismo
