--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -5,5 +5,9 @@ descripcion: |
 
 conferencia:
   url: https://meet.jit.si/obj1#config.startWithVideoMuted=true
-  horarios: Tenemos **dos** encuentros. <br/> El primero es el martes 21 de abril, de 14.30 a 16.00, y de 18.00 a 19.30. <br/> El segundo es el jueves 23 de abril, de 14.30 a 16.00, y de 18.00 a 19.30.
+  horario0: Tenemos **dos** encuentros.  
+
+  horario1: El primero es el martes 21 de abril, de 14.30 a 16.00, y de 18.00 a 19.30. 
+  
+  horario2: El segundo es el jueves 23 de abril, de 14.30 a 16.00, y de 18.00 a 19.30.
 
