semana 3 casi completa - debugging 03

--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -6,7 +6,7 @@ descripcion: |
 
   Los dos temas nuevos son: 1. el ambiente Wollok, y 2. los tests.
 
-  Por favor, no se olviden, después de tener Wollok instalado y andando, llenen la encuesta en https://forms.gle/7AVNEQcXFAvYY2nSA . Es lo que mandamos al campus y a Discord.
+  Por favor, no se olviden, después de tener Wollok instalado y andando, llenen la encuesta en [https://forms.gle/7AVNEQcXFAvYY2nSA](https://forms.gle/7AVNEQcXFAvYY2nSA) . Es lo que mandamos al campus y a Discord.
 
   Aparece un nuevo ejercicio, que es una extensión del modelo de Pepita la golondrina. Trabajamos con ese, y con el de gustos.
 
