--- a/_data/cursada_actual/03.yml
+++ b/_data/cursada_actual/03.yml
@@ -18,10 +18,14 @@ descripcion: |
 videos:
   - nombre: El modelo de Pepita se extiende - Roque el entrenador, y dos amigas de Pepita.
     url: https://youtu.be/1RlwP_WLHRg
-  - nombre: Creamos nuevos objetos - las temporadas de Mar del Plata en Pepita viajera.
-    url: https://youtu.be/7QRWdouBcsY
   - nombre: Atributos que hacen referencia a objetos "nuestros" - el bolichito en el ejercicio de Gustos.
     url: https://youtu.be/IEfOZLDgzDI
+  - nombre: Práctica sobre lo que venimos viendo - Pepita viajera.
+    url: https://youtu.be/COoSQb9JuyQ
+  - nombre: Creamos nuevos objetos - las temporadas de Mar del Plata en Pepita viajera.
+    url: https://youtu.be/7QRWdouBcsY
+  - nombre: Cambiar la interface - se agrega el destino Noroeste.
+    url: https://youtu.be/Ly8TSZcfon8
   - nombre: Introducción a los tests automáticos.
     url: https://youtu.be/1BNEa7ma5cA
 
