semana 4 - a ver como quedo

--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -33,7 +33,7 @@ entrega:
       repo: obj1-unahur/bicis-gobstones
       comentarios: 
         - name: Resolver hasta donde puedan
-          repo: https://docs.google.com/forms/d/e/1FAIpQLSe_TFDo0HMKvcjYQwM2umdugPdpcXQ3uBvPWNLCBdx9TQ25Sg/viewform
+          repo: https://forms.gle/HjVQM8gTE5kJpLYs6
 
 
 mumuki:
