arreglado link primer video semana 4

--- a/_data/cursada_actual/04.yml
+++ b/_data/cursada_actual/04.yml
@@ -14,7 +14,7 @@ descripcion: |
 
 videos:
   - nombre: Referencias - usando el ejercicio de gustos.
-    url: https://youtu.be/CGO3htDNY-8`
+    url: https://youtu.be/CGO3htDNY-8
   - nombre: Empanadas Giménez parte 1 - Giménez, dos empleados, un test
     url: https://youtu.be/Kalojrle0kk
   - nombre: Empanadas Giménez parte 2 - que hace cada empleado cuando cobra, uso de self
