--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -12,7 +12,7 @@ descripcion: |
   Por favor, vayan leyendo el "otro apunte sobre Git" que está en la página de material, es cortesía de colegas de la Universidad Tecnológica Nacional - regionales Buenos Aires y Delta. Quienes puedan, instalen Git, en este apunte está el link.  
   **Después** de leer el "otro apunte sobre Git" y de tenerlo instalado, léanse la "Guía rápida de cómo usar Git".  
 
-  Finalmente, si hay consultas, nos va a servir **mucho** el dato de qué SO usa cada quién. Por eso, por favor, llenen [esta encuesta](https://forms.gle/7UgYnBFugFGhzm3E8), les va a tomar 23 segundos. ¡Gracias!
+  Finalmente, si hay consultas, nos va a servir **mucho** el dato de qué SO usa cada quién. Por eso, por favor, llenen [la encuesta más corta del mundo](https://forms.gle/7UgYnBFugFGhzm3E8), les va a tomar 23 segundos. ¡Gracias!
 
 
 
