--- a/_data/cursada_actual/05.yml
+++ b/_data/cursada_actual/05.yml
@@ -18,6 +18,7 @@ descripcion: |
 
 videos:
   - nombre: Introducción a listas.
+    url: https://youtu.be/Nm3-USo-p_c
   - nombre: Qué es eso de los bloques.
     url: https://youtu.be/e0vUqLxhKdA
   - nombre: Recorridos usando listas y bloques - intro + recorridos con condición
@@ -27,6 +28,7 @@ videos:
   - nombre: Recorridos usando listas y bloques - recorridos con indicación
     url: https://youtu.be/hX8PMSeryMA
   - nombre: Conjuntos.
+    url: https://youtu.be/vLSs5-OYRIU
   - nombre: Golosinas - algunas golosinas, varios métodos que usan una lista
     url: https://youtu.be/sYLPxKc_QmA
   - nombre: Golosinas - más métodos usando listas
@@ -39,7 +41,7 @@ conferencia:
   horarios: Jueves 7 de mayo, de 14.30 a 16.00, y de 18.00 a 19.30.
 
 entrega:
-  fecha: 2020-12-05T14:00
+  fecha: 2020-05-12T14:00
   ejercicios:
     - name: Producción de una máquina
       repo: obj1-unahur/produccion-maquina
