--- a/_data/cursada_actual/06.yml
+++ b/_data/cursada_actual/06.yml
@@ -14,7 +14,7 @@ descripcion: |
 
 
 videos:
-  - nombre: Dos golosinas especiales: golosina bañada y tutti-frutti. 
+  - nombre: Dos golosinas especiales, golosina bañada y tutti-frutti. 
     url: https://youtu.be/LHL8fzExoAw
   - nombre: Casa de Pepe y Julián - varios métodos de recorrido de una lista.
     url: https://youtu.be/utgAk8PjB7w
