--- a/_data/cursada_actual/07.yml
+++ b/_data/cursada_actual/07.yml
@@ -13,7 +13,7 @@ descripcion: |
 videos:
   - nombre: expresiones compuestas con colecciones, operaciones combinadas
     url: https://youtu.be/hji1pHqFhPo
-  - nombre: método tiene(cosa) en la casa de Pepe y Julián: hay que agregar métodos a muchos objetos
+  - nombre: método tiene(cosa) en la casa de Pepe y Julián - hay que agregar métodos a muchos objetos
     url: https://youtu.be/ES88DQhFJOY
   - nombre: clases - motivación - Mariano quiere 3 caramelos
     url: https://youtu.be/m-D-Q6BNNfE
