--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -14,9 +14,12 @@ descripcion: |
   Recuerden que los sábados Joaquín pone un horario para consultas, lo que no les haya funcionado de Git lo pueden ver con él.  
   También tienen siempre discord y campus.
 
-  **Atenti**  
+  **Aviso del futuro - 1**  
   La semana que viene hay "especial", o sea, hay sesión martes y jueves. La del martes es para introducir Wollok Game, una parte de Wollok que  facilita el desarrollo de juegos gráficos. En particular, el TP va a ser armar un juego o simulación gráfica.  
   Ojalá se enganchen, van a poder programar personajes que se mueven, y (un poco más adelante), que también se chocan e interactúan.  
+
+  **Aviso del futuro - 2**  
+  La entrega de la semana siguiente, viene bien potente. Reservarle tiempo.
   
 
 videos:
