--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -20,7 +20,7 @@ descripcion: |
 
   **Aviso del futuro - 2**  
   La entrega de la semana siguiente, viene bien potente. Reservarle tiempo.
-  
+
 
 videos:
   - nombre: ¿Cómo es esto del polimorfismo ahora que tenemos clases e instancias?
@@ -36,7 +36,7 @@ videos:
 
 conferencia:
   url: https://meet.jit.si/obj1#config.startWithVideoMuted=true
-  horarios: Jueves 28 de mayo, de 14.30 a 16.00, y de 18.00 a 19.30. Pedido especial: quienes tengan cámara ténganla preparada, la idea es que nos veamos las caras al menos unos minutos.
+  horarios: Jueves 28 de mayo, de 14.30 a 16.00, y de 18.00 a 19.30. Pedido especial - quienes tengan cámara en la compu ténganla preparada, la idea es que nos veamos las caras al menos unos minutos.
 
 
 entrega:
