--- a/_data/cursada_actual/08.yml
+++ b/_data/cursada_actual/08.yml
@@ -26,10 +26,10 @@ videos:
     url: https://youtu.be/Wy6odKeE-4o
   - nombre: var property, una forma de ahorrarse un poco de código
     url: https://youtu.be/A5YahcZZ7Is
-  - nombre: ... próximamente ... resolución de bultos en camión de transporte - hay que agregarle más consultas a objetos que ya teníamos
-    url: https://obj1-unahur.github.io/cursada
-  - nombre: ... próximamente ... expresión ternaria - un lindo truquito para escribir un poco menos, y entender un poco más
-    url: https://obj1-unahur.github.io/cursada
+  - nombre: resolución de bultos en camión de transporte - hay que agregarle más consultas a objetos que ya teníamos
+    url: https://youtu.be/c27MMRweTZM
+  - nombre: expresión ternaria - un lindo truquito para escribir un poco menos, y entender un poco más
+    url: https://youtu.be/1XdYc-91Vtg
 
 
 
