--- a/_data/cursada_actual/09.yml
+++ b/_data/cursada_actual/09.yml
@@ -1,4 +1,4 @@
-descripcion: 
+descripcion: |
   Esta semana seguimos trabajando los conceptos que ya vimos, y agregamos Wollok Game.
 
   Para Game tenemos una serie de videos, y la sesión especial del martes 2.
