Se sube video de bicis compañeras

--- a/_data/cursada_actual/10.yml
+++ b/_data/cursada_actual/10.yml
@@ -19,8 +19,8 @@ videos:
     url: https://youtu.be/9mBGMNL4SXE
   - nombre: Nueva Instancia dentro de una expresión
     url: https://youtu.be/01ewdTUk658
-  - nombre: ... próximamente ... Modelado con Responsabilidades
-    url: https://obj1-unahur.github.io/cursada
+  - nombre: Modelado con Responsabilidades (Bicis Compañeras)
+    url: https://youtu.be/Xxrcze6OUQU
 
 
 conferencia:
