--- a/_data/cursada_actual/11.yml
+++ b/_data/cursada_actual/11.yml
@@ -15,6 +15,8 @@ descripcion: |
   
   * Parcial **2 de Julio**
 
+  * Entrega TP grupal **14 de Julio**
+
 videos:
  
   - nombre: Herencia -  Naves Espaciales Parte I
