Semana 12 - Resuelto Plagas por Joaquin

--- a/_data/cursada_actual/12.yml
+++ b/_data/cursada_actual/12.yml
@@ -29,7 +29,7 @@ entrega:
 
 ejercicios:
   - name: Plagas (Resuelto Joaquin)
-    repo: https://github.com/obj1-unahur-2019s1/plagas-JoaquinPettinari
+    repo: obj1-unahur-2019s1/plagas-JoaquinPettinari
     comentarios: 
         - name: Ejercicio resuelto para practicar
 
